--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>SPA Bastelkiste</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <!--
+    <script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
+    -->
+    <script src="https://unpkg.com/mithril/mithril.js"></script>
+    <script src="js/app.js"></script>
+  </head>
   <body>
-    Hi!
+    not rendered!
   </body>
 </html>
